apps/production/nextcloud/nextcloud-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: ownapps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
    - hosts:
        - nextcloud.yuandrk.net
      secretName: nextcloud-ingress-prod
  rules:
    - host: "nextcloud.yuandrk.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
